{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 49,
  "lineage": "cdcc41ce-0e89-a040-2bb1-027e9bfbf1ce",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hq_to_monaco",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/virtualNetworkPeerings/HQ-to-Monaco-Peering",
            "name": "HQ-to-Monaco-Peering",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet",
            "resource_group_name": "F1-HQ-Main-RG",
            "use_remote_gateways": false,
            "virtual_network_name": "F1-HQ-Main-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet",
            "module.monaco_network.azurerm_resource_group.f1_rg",
            "module.monaco_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hq_to_silverstone",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/virtualNetworkPeerings/HQ-to-Silverstone-Peering",
            "name": "HQ-to-Silverstone-Peering",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet",
            "resource_group_name": "F1-HQ-Main-RG",
            "use_remote_gateways": false,
            "virtual_network_name": "F1-HQ-Main-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet",
            "module.silverstone_network.azurerm_resource_group.f1_rg",
            "module.silverstone_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "monaco_to_hq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/virtualNetworkPeerings/Monaco-to-HQ-Peering",
            "name": "Monaco-to-HQ-Peering",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet",
            "resource_group_name": "F1-Monaco-Track-RG",
            "use_remote_gateways": false,
            "virtual_network_name": "F1-Monaco-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet",
            "module.monaco_network.azurerm_resource_group.f1_rg",
            "module.monaco_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "silverstone_to_hq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/virtualNetworkPeerings/Silverstone-to-HQ-Peering",
            "name": "Silverstone-to-HQ-Peering",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet",
            "resource_group_name": "F1-Silverstone-Track-RG",
            "use_remote_gateways": false,
            "virtual_network_name": "F1-Silverstone-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet",
            "module.silverstone_network.azurerm_resource_group.f1_rg",
            "module.silverstone_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "trackside_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/networkSecurityGroups/Trackside-NSG",
            "location": "francecentral",
            "name": "Trackside-NSG",
            "resource_group_name": "F1-HQ-Main-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "f1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/routeTables/F1-HQ-Main-RG-RouteTable",
            "location": "francecentral",
            "name": "F1-HQ-Main-RG-RouteTable",
            "resource_group_name": "F1-HQ-Main-RG",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Direct-Internet-Outbound",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Trackside-Edge-Subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "garage_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Garage-IoT-Subnet",
            "name": "Garage-IoT-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-HQ-Main-RG",
            "virtual_network_name": "F1-HQ-Main-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hq_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/HQ-Database-Subnet",
            "name": "HQ-Database-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-HQ-Main-RG",
            "virtual_network_name": "F1-HQ-Main-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pitwall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Pitwall-Analytics-Subnet",
            "name": "Pitwall-Analytics-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-HQ-Main-RG",
            "virtual_network_name": "F1-HQ-Main-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "trackside_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Trackside-Edge-Subnet",
            "name": "Trackside-Edge-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-HQ-Main-RG",
            "virtual_network_name": "F1-HQ-Main-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "trackside_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Trackside-Edge-Subnet",
            "route_table_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/routeTables/F1-HQ-Main-RG-RouteTable",
            "subnet_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Trackside-Edge-Subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg",
            "module.hq_network.azurerm_route_table.f1_route_table",
            "module.hq_network.azurerm_subnet.trackside_subnet",
            "module.hq_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hq_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "f1_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "df5c5497-6d00-4e2a-a89e-4ef38fc598e4",
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet",
            "location": "francecentral",
            "name": "F1-HQ-Main-RG-VNet",
            "resource_group_name": "F1-HQ-Main-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Trackside-Edge-Subnet",
                "name": "Trackside-Edge-Subnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/HQ-Database-Subnet",
                "name": "HQ-Database-Subnet"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Pitwall-Analytics-Subnet",
                "name": "Pitwall-Analytics-Subnet"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-HQ-Main-RG/providers/Microsoft.Network/virtualNetworks/F1-HQ-Main-RG-VNet/subnets/Garage-IoT-Subnet",
                "name": "Garage-IoT-Subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hq_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "trackside_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/networkSecurityGroups/Trackside-NSG",
            "location": "francecentral",
            "name": "Trackside-NSG",
            "resource_group_name": "F1-Monaco-Track-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "f1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/routeTables/F1-Monaco-Track-RG-RouteTable",
            "location": "francecentral",
            "name": "F1-Monaco-Track-RG-RouteTable",
            "resource_group_name": "F1-Monaco-Track-RG",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Direct-Internet-Outbound",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Trackside-Edge-Subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "garage_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Garage-IoT-Subnet",
            "name": "Garage-IoT-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Monaco-Track-RG",
            "virtual_network_name": "F1-Monaco-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg",
            "module.monaco_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hq_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/HQ-Database-Subnet",
            "name": "HQ-Database-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Monaco-Track-RG",
            "virtual_network_name": "F1-Monaco-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg",
            "module.monaco_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pitwall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Pitwall-Analytics-Subnet",
            "name": "Pitwall-Analytics-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Monaco-Track-RG",
            "virtual_network_name": "F1-Monaco-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg",
            "module.monaco_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "trackside_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Trackside-Edge-Subnet",
            "name": "Trackside-Edge-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Monaco-Track-RG",
            "virtual_network_name": "F1-Monaco-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg",
            "module.monaco_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "trackside_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Trackside-Edge-Subnet",
            "route_table_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/routeTables/F1-Monaco-Track-RG-RouteTable",
            "subnet_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Trackside-Edge-Subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg",
            "module.monaco_network.azurerm_route_table.f1_route_table",
            "module.monaco_network.azurerm_subnet.trackside_subnet",
            "module.monaco_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.monaco_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "f1_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "88de013a-6c27-4d08-a4df-96d7141b4931",
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet",
            "location": "francecentral",
            "name": "F1-Monaco-Track-RG-VNet",
            "resource_group_name": "F1-Monaco-Track-RG",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Trackside-Edge-Subnet",
                "name": "Trackside-Edge-Subnet"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/HQ-Database-Subnet",
                "name": "HQ-Database-Subnet"
              },
              {
                "address_prefix": "10.1.3.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Pitwall-Analytics-Subnet",
                "name": "Pitwall-Analytics-Subnet"
              },
              {
                "address_prefix": "10.1.4.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Monaco-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Monaco-Track-RG-VNet/subnets/Garage-IoT-Subnet",
                "name": "Garage-IoT-Subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.monaco_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "trackside_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/networkSecurityGroups/Trackside-NSG",
            "location": "switzerlandnorth",
            "name": "Trackside-NSG",
            "resource_group_name": "F1-Silverstone-Track-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "f1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/routeTables/F1-Silverstone-Track-RG-RouteTable",
            "location": "switzerlandnorth",
            "name": "F1-Silverstone-Track-RG-RouteTable",
            "resource_group_name": "F1-Silverstone-Track-RG",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Direct-Internet-Outbound",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Trackside-Edge-Subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "garage_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Garage-IoT-Subnet",
            "name": "Garage-IoT-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Silverstone-Track-RG",
            "virtual_network_name": "F1-Silverstone-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg",
            "module.silverstone_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hq_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/HQ-Database-Subnet",
            "name": "HQ-Database-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Silverstone-Track-RG",
            "virtual_network_name": "F1-Silverstone-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg",
            "module.silverstone_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pitwall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Pitwall-Analytics-Subnet",
            "name": "Pitwall-Analytics-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Silverstone-Track-RG",
            "virtual_network_name": "F1-Silverstone-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg",
            "module.silverstone_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "trackside_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Trackside-Edge-Subnet",
            "name": "Trackside-Edge-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "F1-Silverstone-Track-RG",
            "virtual_network_name": "F1-Silverstone-Track-RG-VNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg",
            "module.silverstone_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "trackside_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Trackside-Edge-Subnet",
            "route_table_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/routeTables/F1-Silverstone-Track-RG-RouteTable",
            "subnet_id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Trackside-Edge-Subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg",
            "module.silverstone_network.azurerm_route_table.f1_route_table",
            "module.silverstone_network.azurerm_subnet.trackside_subnet",
            "module.silverstone_network.azurerm_virtual_network.f1_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.silverstone_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "f1_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "893d9e09-d7ad-4358-9125-818642697757",
            "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet",
            "location": "switzerlandnorth",
            "name": "F1-Silverstone-Track-RG-VNet",
            "resource_group_name": "F1-Silverstone-Track-RG",
            "subnet": [
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Trackside-Edge-Subnet",
                "name": "Trackside-Edge-Subnet"
              },
              {
                "address_prefix": "10.2.2.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/HQ-Database-Subnet",
                "name": "HQ-Database-Subnet"
              },
              {
                "address_prefix": "10.2.3.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Pitwall-Analytics-Subnet",
                "name": "Pitwall-Analytics-Subnet"
              },
              {
                "address_prefix": "10.2.4.0/24",
                "id": "/subscriptions/81d87c4b-9aa7-4db6-973a-0bb7c348f163/resourceGroups/F1-Silverstone-Track-RG/providers/Microsoft.Network/virtualNetworks/F1-Silverstone-Track-RG-VNet/subnets/Garage-IoT-Subnet",
                "name": "Garage-IoT-Subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.silverstone_network.azurerm_resource_group.f1_rg"
          ]
        }
      ]
    }
  ]
}